--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
     <meta name="description" content="Jogo da Memória">    
     <title>Jogo da Memória</title>
     
-    <link rel="stylesheet" type="text/css" href="/style/estilos.css"> 
-    <script src="/js/index.js"></script>   
-    <script src="/js/embaralha.js"></script>     
+    <link rel="stylesheet" type="text/css" href="./style/estilos.css"> 
+    <script src="./js/index.js"></script>   
 </head>
 <body>
     <div class="container"></div>    
     <script>
-        carregaImagens()
         carregaImagens()
     </script>
 </body>
