--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Bart Silva">
+    <meta name="author" content="Bart-Silva">
     <meta name="description" content="Jogo da Memória">    
-    <title>Jogo da Memória</title>    
+    <title>Vira Cartas - Jogo da Memória</title>    
     <link rel="stylesheet" type="text/css" href="./style/estilos.css"> 
     <script src="./js/index.js"></script>   
 </head>
