--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container"></div> 
     <script>
         carregaImagens()
+        //// teste do git no linux lubuntu
     </script>
 </body>
 </html>
